--- a/samples/src/pages/styles/Home.page.css
+++ b/samples/src/pages/styles/Home.page.css
@@ -15,15 +15,21 @@
     }
 
     h1 {
-      margin: 0;
       font-weight: 100;
-      font-size: 2rem;
 
       em {
         font-style: normal;
         font-weight: 700;
         letter-spacing: -0.05rem;
       }
+    }
+  }
+
+  .Links {
+    ul,
+    ol {
+      margin: 0;
+      padding: 1rem;
     }
   }
 }
