Add `Button` component sample pages and update router

--- a/samples/src/pages/styles/Pages.css
+++ b/samples/src/pages/styles/Pages.css
@@ -46,8 +46,11 @@
 
   a:link,
   a:visited {
-    color: var(--color);
     text-decoration: none;
+
+    &:not([type]) {
+      color: var(--color);
+    }
   }
 
   a:hover {
