--- a/samples/src/pages/styles/Sample.page.css
+++ b/samples/src/pages/styles/Sample.page.css
@@ -25,10 +25,11 @@
     .Sample {
       h2 {
         font-weight: 100;
-        letter-spacing: -0.05rem;
 
         code {
+          padding-right: 0.5rem;
           font-weight: 500;
+          letter-spacing: -0.1rem;
         }
       }
 
