--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -209,9 +209,63 @@
     }
   }
 
+  &.IconButton {
+    padding: 0.75rem;
+    border-radius: 50%;
+
+    svg {
+      width: 1em;
+      height: 1em;
+      pointer-events: none;
+      stroke: currentcolor;
+      fill: currentcolor;
+    }
+
+    .Ripple {
+      span.Focus {
+        animation:
+          IconRippleVisible 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms forwards,
+          IconRipplePulse 2500ms infinite cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+      }
+    }
+
+    &.Text {
+      margin: -1rem -0.125rem -0.75rem;
+      position: relative;
+      top: 0.125rem;
+      vertical-align: baseline;
+    }
+  }
+
   &.Disabled {
     cursor: default;
     pointer-events: none;
+  }
+}
+
+@keyframes IconRipplePulse {
+  0% {
+    transform: scale(0.9);
+  }
+
+  50% {
+    transform: scale(0.725);
+  }
+
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+@keyframes IconRippleVisible {
+  from {
+    opacity: 0.1;
+    transform: scale(0);
+  }
+
+  to {
+    opacity: 0.3;
+    transform: scale(0.9);
   }
 }
 
